Add new column "isReject" to transactions table
