# swagger.json
@@ -657,6 +657,11 @@
             "type": "string",
             "enum": ["send", "receive"]
           },
+          "isReject": {
+            "type": "boolean",
+            "example": false,
+            "nullable": true
+          },
           "executionTime": {
             "type": "string",
             "format": "date-time",
